# yt-tts-forge

./: README.md  asset_downloader.py  prepare_tts_dataset.py  pyproject.toml  tts_align.py
configs/: config.yaml
configs/tts_align/: align.yaml  ayodhya.yaml  make_1st_1cr.yaml
configs/tts_prepare/: ayodhya.yaml  make_1st_1cr.yaml
configs/yt_asset/: ayodhya.yaml  make_1st_1cr.yaml
notebooks/: download_transcripts.ipynb
utils/: text_cleaners.py
utils/english/: abbreviations.py  time_norm.py
